...
        configuration.userContentController.addUserScript(WKUserScript(source: "document.documentElement.style.setProperty('--g-pad', '\(margins.pagePadding + 2)px'); true", injectionTime: .atDocumentEnd, forMainFrameOnly: true, in: DictionaryPage.selectionWorld))
        configuration.userContentController.addUserScript(WKUserScript(source: PageRules.initial(on: ruled, color: ruleColor), injectionTime: .atDocumentStart, forMainFrameOnly: true, in: DictionaryPage.selectionWorld))
        configuration.userContentController.addUserScript(WKUserScript(source: PageRules.script, injectionTime: .atDocumentEnd, forMainFrameOnly: true, in: DictionaryPage.selectionWorld))
        let view = ReaderWebView(frame: .zero, configuration: configuration)
        view.quietMenu = quietMenu
        view.scrollView.delegate = coordinator
        view.accessibilityIdentifier = "grammarLessonPage"
        view.navigationDelegate = coordinator
        view.isOpaque = false
        view.backgroundColor = .clear
        view.scrollView.backgroundColor = .clear
        view.loadHTMLString(html, baseURL: URL(string: "jpgrammar://lesson/"))
        coordinator.sizeSwipe.attach(to: view, scrollView: view.scrollView)
...
